# mmath

./: .gitignore  LICENSE  README.md  library.json
doc/: Quaternion.md  Vector.md
include/mmath/: Angles.h  Constants.h  EulerAngles.h  Length.h  Quaternion.h  Transform.h  Vector.h  Vector3.h  mmath.h  util.h
test/: CMakeLists.txt  README.md
test/mmath/Angle/: test_Angle.cpp  unittest.cmake
test/mmath/Length/: test_Length.cpp  unittest.cmake
test/mmath/Transform/: test_Transform.cpp  unittest.cmake
test/mmath/Vector/: test_Vector.cpp  unittest.cmake
test/mmath/util/: test_util.cpp  unittest.cmake
